Resolve Keyboard issue

--- a/App24/app/src/main/res/values/strings.xml
+++ b/App24/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="about">About</string>
     <string name="logout">Logout</string>
     <string name="setting">Setting</string>
-
+    <string name="email_hint_chinese">請填寫您的Paypal帳戶信箱</string>
 
     <!--Create Post Screen -->
 
