--- a/App24/app/src/main/res/values/strings.xml
+++ b/App24/app/src/main/res/values/strings.xml
@@ -105,4 +105,9 @@
         共的功斯常
     </string>
     <string name="progress_loading">Loading</string>
+    <string name="progress_fetching_videos">Fetching gallery videos</string>
+    <string name="progress_fetching_images">Fetching gallery images</string>
+    <string name="posting_feed">Posting Feed...</string>
+    <string name="no_more_data">No more data</string>
+    <string name="check_your_internet_connection">Please check your internet connection</string>
 </resources>
