--- a/App24/app/src/main/res/values/strings.xml
+++ b/App24/app/src/main/res/values/strings.xml
@@ -118,4 +118,11 @@
     <string name="deleting_feed">Deleting Feed</string>
     <string name="please_enter_valid_email">Please enter valid details</string>
     <string name="sharing_feed">Sharing Feed</string>
+    <string name="share_twitter">Twitter</string>
+    <string name="share_facebook">Facebook</string>
+    <!--<string name="share_sms">Sms</string>-->
+    <string name="share_email_subject">App24</string>
+    <!--<string name="share_email_gmail">Gmail</string>-->
+    <string name="share_email_native">Mail</string>
+    <string name="share_chooser_text">Share With..</string>
 </resources>
