Add language file

--- a/App24/app/src/main/res/values/strings.xml
+++ b/App24/app/src/main/res/values/strings.xml
@@ -125,7 +125,12 @@
     <!--<string name="share_email_gmail">Gmail</string>-->
     <string name="share_email_native">Mail</string>
     <string name="share_chooser_text">Share With..</string>
-    <string name="write_a_comment">Write a comment</string>
+    <string name="write_a_comment">Write a comment...</string>
+    <string name="post_comment">Post Comment</string>
     <string name="please_wait">Please wait</string>
     <string name="feed_saved_successfully">Feed saved successfully!</string>
+    <string name="whats_in_your_mind">Whats in your mind</string>
+    <string name="comment_description">comment description</string>
+    <string name="title">title</string>
+    <string name="just_now">Just now</string>
 </resources>
